--- a/src/app/newscontent/newscontent.component.html
+++ b/src/app/newscontent/newscontent.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 获取的id：{{id}}
 <app-footer></app-footer>
+<a [routerLink]="['./details']">news-detailsss</a>-----------
+<a [routerLink]="['./author']">author</a>
+<router-outlet></router-outlet>
