声明周期钩子函数

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
   <a routerLink="/news" >news</a>
   --
   <a routerLink="/newscontent/6" >newscontent</a>
+  --
+  <a routerLink="/comlifecycle">comlifecycle</a>
 </h1>
  
 <router-outlet></router-outlet>
