ad组件自定义

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,8 @@
 <button (click)='goNewscontentExtra()'>路由的js跳转NewscontentExtra</button>
 
 <button (click)='changeContent()'>改变content</button>
+
+<br/>
+<div>
+    <app-ad-banner [ads]="ads"></app-ad-banner>
+  </div>
