用户自定义组件popup

--- a/src/app/com-life-cycle/com-life-cycle.component.html
+++ b/src/app/com-life-cycle/com-life-cycle.component.html
@@ -2,4 +2,8 @@
   com-life-cycle works!
   <input [(ngModel)]="verb" />
   <button (click)="submit()" >点击</button>
+  <br/>
+  <input #input value="Message">
+    <button (click)="popup.showAsComponent(input.value)">Show as component</button>
+    <button (click)="popup.showAsElement(input.value)">Show as element</button>
 </p>
