--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
   <a routerLink="/newscontent/6" >newscontent</a>
   --
   <a routerLink="/comlifecycle">comlifecycle</a>
+  --
+  <a routerLink="/rxjs">rxjs</a>
 </h1>
  
 <router-outlet></router-outlet>
