--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
   <a routerLink="/comlifecycle">comlifecycle</a>
   --
   <a routerLink="/rxjs">rxjs</a>
+  <tree-root [nodes]="nodes" [options]="options"></tree-root>
 </h1>
  
 <router-outlet></router-outlet>
