树控件 样式修改 1.2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   <a routerLink="/comlifecycle">comlifecycle</a>
   --
   <a routerLink="/rxjs">rxjs</a>
-  <tree-root #tree [nodes]="nodes" [options]="options"></tree-root>
 </h1>
  
+<div><tree-root #tree [nodes]="nodes" [options]="options"></tree-root></div>
 <router-outlet></router-outlet>
